api-manager/v/1.x/available-policies.adoc
= About Provided Policies
:keywords: policy, available policies

In the process of applying a policy to an API, a list of policies you can apply appears.  

image::select-policy.png[]

If a policy is already applied, or if the protection it provides is already fulfilled by a policy you applied, the policy appears unavailable. You can filter the list by policy categories:

* Compliance
* Security
* Quality of Service

After selecting a category, you can further filter the list by the kind of protection it fulfills. Any requirements for achieving the level of protection specified by the filter is also listed.

image::policy-filters.png[]

Anypoint Platform provides the following policies:

link:/api-manager/v/1.x/add-remove-headers[Add/Remove Headers]:: Injects or removes HTTP headers from a request or response.
link:/api-manager/v/1.x/client-id-based-policies[Client ID Enforcement]:: Enforces the requirement for calls to the API must include a valid client ID and client secret. See footnote.
link:/api-manager/v/1.x/cors-policy[Cross-Origin Resource Sharing]:: Allows JavaScript XMLHttpRequest (XHR) calls executed in a web page to interact with resources from non-origin domains. CORS is a commonly implemented solution to the "same-origin policy" that is enforced by all browsers. This policy enables all origins, and makes all resources of an API public.
link:/api-manager/v/1.x/http-basic-authentication-policy[HTTP Basic Authentication Policy]:: Enforces authentication per the details configured in a Security Manager policy.
link:/api-manager/v/1.x/ip-blacklist[IP Blacklist]:: Denies API calls from a defined set of IP addresses.
link:/api-manager/v/1.x/ip-whitelist[IP Whitelist]:: Limits API calls to a defined set of IP addresses.
link:/api-manager/v/1.x/json-xml-threat-policy[JSON Threat Protection]:: Protects the target API against malicious JSON that could cause problems.
link:/api-manager/v/1.x/ldap-security-manager[LDAP Security Manager]:: Injects an LDAP-based security manager into the target API.
link:/api-manager/v/1.x/external-oauth-2.0-token-validation-policy[OAuth 2.0 Access Token Enforcement Using External Provider Policy]:: Configures the API so that its endpoints require a mandatory and valid OAuth 2.0 token. You must reference an external Mule application that serves as the OAuth provider. Update the RAML of your API using the provided snippet before using this policy.
link:/api-manager/v/1.x/openam-oauth-token-enforcement-policy[OpenAM Access Token Enforcement]:: Configures the API so that its endpoints require a mandatory and valid OpenAM token. This policy is only available to organizations using an OpenAM Federated Identity Management system.
link:/api-manager/v/1.x/openid-oauth-token-enforcement-policy[OpenID Connect Access Token Enforcement]:: Configures the API so that its endpoints require a mandatory and valid token. This policy is only available to organizations using an OpenID Connect Management system.
link:/api-manager/v/1.x/pingfederate-oauth-token-enforcement-policy[PingFederate Access Token Enforcement] :: Configures the API so that its endpoints require a mandatory and valid PingFederate token. This policy is only available to organizations using a PingFederate Federated Identity Management system.
link:/api-manager/v/1.x/rate-limiting-and-throttling-sla-based-policies[Rate Limiting – SLA-Based]:: Limits the number of messages per time period processed by an API at a maximum value specified in the SLA tier. Any messages beyond the maximum are rejected. Enforcement is based on the client ID passed in the request. See footnote.
link:/api-manager/v/1.x/client-id-based-policies[Rate Limiting]:: Limits the number of messages processed by an API per time period at a maximum value specified in the policy. The rate limiting is applied to all API calls, regardless of the source. Any messages beyond the maximum are rejected.
Simple Security Manager:: Supports a placeholder security manager that can be configured with a hard-coded username and password for testing purposes.
link:/api-manager/v/1.x/rate-limiting-and-throttling-sla-based-policies[Throttling -SLA-Based]:: Throttles he number of messages per time period processed by an API at a maximum value specified in the SLA tier. Any messages beyond the maximum are queued for later processing. Enforcement is based on the client ID passed in the request. See footnote.
link:/api-manager/v/1.x/client-id-based-policies[Throttling]:: Throttles the number of messages processed by an API per time period at a maximum value specified in the policy. The throttling is applied to all API calls, regardless of the source. Any messages beyond the maximum are queued for later processing.
link:/api-manager/v/1.x/json-xml-threat-policy[XML Threat Protection]:: Protects the target API against malicious XML that could cause problems.

*Note*: Update the RAML of your API using the provided snippet before using this policy.

////

== Policy Categories

The following table lists the policy, the required characteristic the policy fulfills, and requirements of the policy.

[%header,cols="40a,15a,30a,15a"]
|===
| Policy | Category | Fulfills | Required
| Client ID Enforcement | Compliance | Client ID Required | None
| CORS | Compliance | CORS-enabled | None
| HTTP Basic Authentication | Security | Authentication | Security Manager
| IP Blacklist | Security | IP Filtered | None
| IP Whitelist | Security | IP Filtered | None
| JSON Threat Protection | Security | JSON Threat Protected | None
| LDAP Security Manager | Security | Security Manager | None
| OAuth 2.0 Access Token Enforcement Using External Provider Policy | Security | OAuth 2.0 protected | None
| OpenAM Access Token Enforcement | Security | OAuth 2.0 Protected | None
| PingFederate Access Token Enforcement | Security | OAuth 2.0 Protected | None
| Rate Limiting | Quality of Service | Rate Limited | None
| Rate Limiting, SLA-Based | Quality of Service | Rate Limited, Client ID required | None
| Simple Security Manager | Security | Security Manager | None
| Throttling -SLA-Based | Quality of Service | Throttled, Rate Limited, Client ID required | None
| Throttling | Quality of Service | Throttled, Rate Limited | None
| XML Threat Protection | Security | XML Threat Protected | None
|===

////

== See Also

* link:/api-manager/v/1.x/prepare-raml-task[To Prepare RAML for Policies]
